adding publish gradle task