@@ -1,3 +1,4 @@
+// build script dependencues
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.serialization_version = '0.10.0'
@@ -12,11 +13,13 @@ buildscript {
     }
 }
 
-group 'com.innovid.cf'
+group 'com.viggin.alfred'
 version '1.0-SNAPSHOT'
 
+// plugins fetched in buildscript.dependencies
 apply plugin: 'kotlin'
-apply plugin: 'kotlinx-serialization'
+apply plugin: 'application' //https://docs.gradle.org/current/userguide/application_plugin.html
+apply plugin: 'kotlinx-serialization' // generate serializers of annotated data classes
 
 repositories {
     mavenCentral()
@@ -29,27 +32,37 @@ repositories {
     }
 }
 
+// runtime dependencies
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation "org.jetbrains.kotlin:kotlin-test"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
+}
+
+application {
+    mainClassName = 'main.workflow.App'
+    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+}
+
+clean {
+    delete 'workflow.log'
 }
 
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'App'
+task('publish') {
+    dependsOn 'installDist'
+    description 'publishing workflow to -> ~/alfred_sync/Alfred.alfredpreferences/workflows/ops_ginie'
+    doFirst {
+        copy {
+            delete "$System.env.HOME/alfred_sync/Alfred.alfredpreferences/workflows/ops_ginie/dist"
+            from("$buildDir") {
+                include "install/**"
+            }
+            into "$System.env.HOME/alfred_sync/Alfred.alfredpreferences/workflows/ops_ginie/dist"
+        }
     }
-
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
